# blunder-analysis

./: .copier-answers.yml  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  duties.py  mkdocs.yml  output  pyproject.toml  shell.nix
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
docs/.overrides/partials/: comments.html
docs/reference/: api.md
notebooks/: 1.0-vg-data-analysis.ipynb  1.1-vg-engine-analysis.ipynb  1.2-vg-stream-game.ipynb  1.3-vg-test-analysis.ipynb  2.0-vg-read-parquet.ipynb  3.0-vg-linear-algebra.ipynb  test.py
scripts/: gen_credits.py  make.py  write_gold_data.py
src/blunder/: __init__.py  __main__.py
src/blunder/_internal/: cli.py  debug.py  pipeline.py  util.py
src/pgn2pg/: __init__.py  __main__.py
src/pgn2pg/_internal/: cli.py  debug.py  util.py
tests/: __init__.py  test_api.py  test_cli.py
