[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "blunder"
description = "Blunder analysis in Chess"
authors = [{name = "Vandit Goel", email = "vandy.goel23@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "chess>=1.11.2",
    "numpy>=2.0.2",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://vandyG.github.io/blunder-analysis"
Documentation = "https://vandyG.github.io/blunder-analysis"
Changelog = "https://vandyG.github.io/blunder-analysis/changelog"
Repository = "https://github.com/vandyG/blunder-analysis"
Issues = "https://github.com/vandyG/blunder-analysis/issues"
Discussions = "https://github.com/vandyG/blunder-analysis/discussions"
Gitter = "https://gitter.im/blunder-analysis/community"
Funding = "https://github.com/sponsors/vandyG"

[project.scripts]
blunder = "blunder:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/**",
    ".github",
    "notebooks/**",
]
sources = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
exclude = [
    ".github/**",
    ".github",
    "notebooks/**",
]

[dependency-groups]
maintain = [
    "build>=1.2",
    "git-changelog>=2.5",
    "hatch>=1.15.1",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
 docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-llmstxt>=0.2",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]
dev = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "pip>=25.2",
    "zstandard>=0.25.0",
]   

[tool.uv]
default-groups = "all"
